fix: Set z-index

--- a/tab/app.css
+++ b/tab/app.css
@@ -15,6 +15,7 @@ img.cat {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: -1;
 
     width: 100%;
     height: 100%;
